PO-2260 (#47)
* add log api

* improved naming - api bundler refactor to avoid unnecessary concatenation
