# src/main/resources/openapi/PersonalDataProcessingLogging.yaml
@@ -15,14 +15,14 @@ paths:
         content:
           application/json:
             schema:
-              $ref: '#/components/schemas/AddPDPLRequest'
+              $ref: '#/components/schemas/AddPdpoLogRequest'
       responses:
         201:
           description: Created — returns the created PersonalDataProcessingLog object (or objects).
           content:
             application/json:
               schema:
-                $ref: '#/components/schemas/PersonalDataProcessingLog'
+                $ref: '#/components/schemas/AddPdpoLogResponse'
         400:
           description: Bad request
           content:
@@ -66,7 +66,7 @@ paths:
         content:
           application/json:
             schema:
-              $ref: '#/components/schemas/SearchPDPLRequest'
+              $ref: '#/components/schemas/SearchPdpoLogRequest'
       responses:
         200:
           description: Array of PersonalDataProcessingLog objects matching the search.
@@ -75,7 +75,7 @@ paths:
               schema:
                 type: array
                 items:
-                  $ref: '#/components/schemas/PersonalDataProcessingLog'
+                  $ref: '#/components/schemas/AddPdpoLogResponse'
         400:
           description: Bad request
           content:
@@ -109,7 +109,8 @@ paths:
 
 components:
   schemas:
-    PDPLIdentifier:
+    ParticipantIdentifier:
+      x-java-class-name: ParticipantIdentifier
       type: object
       required:
         - id
@@ -126,7 +127,8 @@ components:
           maxLength: 30
           description: Type of identifier. Examples - OPAL_USER_ID, EXTERNAL_SERVICE, DEFENDANT, MINOR_CREDITOR.
 
-    PersonalDataProcessingLog:
+    AddPdpoLogResponse:
+      x-java-class-name: AddPdpoLogResponse
       type: object
       required:
         - pdpo_log_id
@@ -143,7 +145,7 @@ components:
           format: int64
           description: The id of the PDPL request.
         created_by:
-          $ref: '#/components/schemas/PDPLIdentifier'
+          $ref: '#/components/schemas/ParticipantIdentifier'
         created_at:
           type: string
           format: date-time
@@ -174,13 +176,13 @@ components:
             - Combination
             - Erasure
         recipient:
-          $ref: '#/components/schemas/PDPLIdentifier'
+          $ref: '#/components/schemas/ParticipantIdentifier'
           description: Required when category = "Disclosure"; must not be present otherwise.
         individuals:
           type: array
           minItems: 1
           items:
-            $ref: '#/components/schemas/PDPLIdentifier'
+            $ref: '#/components/schemas/ParticipantIdentifier'
           description: People the PDPO relates to.
       if:
         properties:
@@ -189,7 +191,8 @@ components:
         then:
           required:
             - recipient
-    AddPDPLRequest:
+    AddPdpoLogRequest:
+      x-java-class-name: AddPdpoLogRequest
       type: object
       required:
         - created_by
@@ -200,7 +203,7 @@ components:
         - individuals
       properties:
         created_by:
-          $ref: '#/components/schemas/PDPLIdentifier'
+          $ref: '#/components/schemas/ParticipantIdentifier'
           description: Identifier for the creator of the PDPL entry.
         created_at:
           type: string
@@ -227,13 +230,13 @@ components:
             - Combination
             - Erasure
         recipient:
-          $ref: '#/components/schemas/PDPLIdentifier'
+          $ref: '#/components/schemas/ParticipantIdentifier'
           description: Required only when category == "Disclosure".
         individuals:
           type: array
           minItems: 1
           items:
-            $ref: '#/components/schemas/PDPLIdentifier'
+            $ref: '#/components/schemas/ParticipantIdentifier'
           description: People the PDPO relates to.
       if:
         properties:
@@ -242,11 +245,12 @@ components:
         then:
           required:
             - recipient
-    SearchPDPLRequest:
+    SearchPdpoLogRequest:
+      x-java-class-name: SearchPdpoLogRequest
       type: object
       properties:
         created_by:
-          $ref: '#/components/schemas/PDPLIdentifier'
+          $ref: '#/components/schemas/ParticipantIdentifier'
         business_identifier:
           type: string
           minLength: 1
@@ -266,4 +270,3 @@ tags:
     description: Endpoints related to personal data processing logging endpoints.
   - name: Test-Support
     description: Test-support endpoints for use by automated tests only.
-
